notes/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ebullientworks
---
apiVersion: v1
kind: Namespace
metadata:
  name: gameon-system
---
